--- a/templates/vcxproj.xml
+++ b/templates/vcxproj.xml
@@ -15,7 +15,6 @@
     {nmake_output}
     <OutDir>{rel_paths.out}\$(BazelCfgDirname)\bin\{target.label.package_path}\</OutDir>
     {target_name_ext}
-    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
 
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -63,7 +62,7 @@
   <PropertyGroup>
     <NMakePreprocessorDefinitions>{target.defines_joined};$(NMakePreprocessorDefinitions)</NMakePreprocessorDefinitions>
     <NMakeIncludeSearchPath>{include_dirs_joined};$(AdditionalIncludeDirectories)</NMakeIncludeSearchPath>
-    <AdditionalOptions>/FC {target.compile_flags_joined} %(AdditionalOptions)</AdditionalOptions>
+    <AdditionalOptions>/FC %(AdditionalOptions)</AdditionalOptions>
   </PropertyGroup>
 
   {file_groups}
