Hacking our way to victory
Hack to make include paths work in Visual Studio
 - Fix old aspects from not getting the include paths
 - Make include dirs point to exec root, because anything else is just wrong
Fix some project from being not loadable
Hardocded to VS 2019 project files, I don't care about that right now
  though one could use vswhere to get the correct information to use
  for that later on

--- a/templates/vcxproj.xml
+++ b/templates/vcxproj.xml
@@ -8,7 +8,7 @@
 
   <PropertyGroup Label="Globals">
     <ProjectName>{target.label.absolute_clean}</ProjectName>
-    <VCProjectVersion>15.0</VCProjectVersion>
+    <VCProjectVersion>16.0</VCProjectVersion>
     <ProjectGuid>{target.guid}</ProjectGuid>
     <Keyword>MakeFileProj</Keyword>
     <UseHostCompilerIfAvailable>false</UseHostCompilerIfAvailable>
@@ -21,7 +21,7 @@
 
   <PropertyGroup Label="Configuration">
     <ConfigurationType>Makefile</ConfigurationType>
-    <PlatformToolset>v141</PlatformToolset>
+    <PlatformToolset>v142</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Fastbuild'" Label="Configuration">
     <UseDebugLibraries>true</UseDebugLibraries>
@@ -36,7 +36,7 @@
 
   <!-- Hack to get most includes working -->
   <PropertyGroup>
-    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);{rel_paths.workspace_root};$(IncludePath)</IncludePath>
+    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);{include_dirs_joined};$(IncludePath)</IncludePath>
   </PropertyGroup>
 
   <ImportGroup Label="ExtensionSettings">
