--- a/templates/vcxproj.xml
+++ b/templates/vcxproj.xml
@@ -7,7 +7,7 @@
 {config_properties}
 
   <PropertyGroup Label="Globals">
-    <ProjectName>{target.label.absolute_clean}</ProjectName>
+    <ProjectName>{target.label.name_or_absolute}</ProjectName>
     <VCProjectVersion>16.0</VCProjectVersion>
     <ProjectGuid>{target.guid}</ProjectGuid>
     <Keyword>MakeFileProj</Keyword>
